# openapi.yaml
@@ -1061,7 +1061,60 @@ paths:
                   message:
                     type: string
                     example: Internal Server Error
-
+  /admin/send-notification/{id}:
+    post:
+      tags:
+        - Admin
+      summary: Send notification to a user
+      description: Send notification to a user
+      parameters:
+        - name: id
+          in: path
+          description: The id of the user to send notification 
+          required: true
+          schema:
+            type: string
+            example: 5f7b3b3b7f3b3b3b3b3b3b3b
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  example: Referal Bonus
+                message:
+                  type: string
+                  example: You have a new notification.
+              required:
+                - title
+                - message
+      responses:
+        "201":
+          description: Notification sent successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Notification sent successfully.
+                  status:
+                    type: boolean
+                    example: true
+        "500":
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Internal Server Error
   /user/{id}:
     get:
       tags:
